# redirector

./: README.md  auth.Dockerfile  boost.Dockerfile  docker-compose.yml  redirector.Dockerfile
authenticator/: CMakeLists.txt  main.cpp  ruleloader.h
authenticator/endpoint/: endpoint.cpp  jsonendpoint.h
authenticator/interfaces/: iendpoint.h  ihandler.h  irule.h  irulebuilder.h
authenticator/ioc/: authprocesscommand.cpp  authprocesscommand.h  commandqueue.cpp  exceptionmanager.cpp  exceptionmanager.h  ioc.cpp  iocnewscopecommand.cpp  iocnewscopecommand.h  iocregistercommand.cpp  iocsetscoperelativecommand.h  iscopechanger.h  ruleredirect.cpp  ruleredirect.h  scope.cpp  sendnorulecommand.h
authenticator/plugins/: CMakeLists.txt
authenticator/plugins/contain/rules/: rulecontain.cpp  rulecontain.h
authenticator/plugins/equal/: CMakeLists.txt  rule_plugin.cpp
authenticator/plugins/equal/rules/: ruleequal.h
authenticator/plugins/gtdate/: CMakeLists.txt  rule_plugin.h
authenticator/plugins/gtdate/rules/: rulegtdate.h
authenticator/plugins/sequences/: CMakeLists.txt  rule_plugin.h
authenticator/tests/: test_iocnewscopecommand.cpp
receptor/: CMakeLists.txt  httpredirector.cpp  httpredirector.h  main.cpp
receptor/interfaces/: icommand.h  iredirector.h
receptor/ioc/: checkusercommand.cpp  checkusercommand.h  commandexception.h  commandqueue.h  iocregistercommand.h  iocsetscoperelativecommand.cpp  macrocommand.cpp  registerusercommand.cpp  registerusercommand.h  resolvercontainer.h  scope.h  scopechangeradapter.cpp  scopechangeradapter.h  scopecontainer.cpp  scopecontainer.h  serverprocesscommand.cpp  serverprocesscommand.h
receptor/tests/: CMakeLists.txt  test_iocregistercommand.cpp  test_iocsetscopeabsolutecommand.cpp  test_iocsetscoperelativecommand.cpp  test_macrocommand.cpp
redirector/: CMakeLists.txt  main.cpp  ruleloader.cpp  rulesequenceloader.cpp  rulesequenceloader.h
redirector/endpoint/: endpoint.h  jsonendpoint.cpp
redirector/interfaces/: icommandqueue.h  iruleloader.h  irulesequenceloader.h
redirector/ioc/: fallbackcommand.cpp  fallbackcommand.h  ioc.h  iocsetscopeabsolutecommand.cpp  iocsetscopeabsolutecommand.h  iresolvercollection.h  iscope.h  jsonrulebuilder.cpp  jsonrulebuilder.h  macrocommand.cpp  macrocommand.h  resolvercollection.cpp  resolvercollection.h  sendnorulecommand.cpp  serverprocesscommand.cpp  serverprocesscommand.h
redirector/plugins/contain/: CMakeLists.txt  rule_plugin.cpp  rule_plugin.h  rule_plugin_global.h
redirector/plugins/equal/: rule_plugin.h
redirector/plugins/equal/rules/: ruleequal.cpp
redirector/plugins/gtdate/: rule_plugin.cpp
redirector/plugins/gtdate/rules/: rulegtdate.cpp
redirector/plugins/sequences/: rule_plugin.cpp
redirector/tests/: CMakeLists.txt  test_ioc.cpp
